--- a/causal_nf/configs/default_config.yaml
+++ b/causal_nf/configs/default_config.yaml
@@ -6,10 +6,9 @@ dataset:
   root: ../Data
   name: chain
   sem_name: linear # non-linear #non-additive
-  # 두 번째 환경 관련 파라미터들 추가
-  env2_name: null          # 두 번째 환경 이름 (null이면 단일 환경)
-  env2_sem_name: null      # 두 번째 환경 SEM 이름
-  env2_base_version: null  # 두 번째 환경 base distribution 버전
+  env2_name: null          
+  env2_sem_name: null      
+  env2_base_version: null  
   splits: [ 0.8,0.2 ]
   k_fold: 1
   shuffle_train: True
